<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.bossutj.myvlillesimple.CarteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnStations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stations" />

        <Button
            android:id="@+id/btnFavoris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favoris" />

        <Button
            android:id="@+id/btnCarte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carte" />

    </LinearLayout>


    <TextView
        android:text="@string/warning"
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/android_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/map"
        android:contentDescription="@string/image_content_description" />


</LinearLayout>
